--- a/TubeScanner/TubeScanner/TubeScanner.csproj
+++ b/TubeScanner/TubeScanner/TubeScanner.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\OutputFile.cs" />
     <Compile Include="Classes\DeviceComms.cs" />
     <Compile Include="Classes\DeviceConnectionMonitor.cs" />
     <Compile Include="Classes\DleCommands.cs" />
