--- a/TubeScanner/TubeScanner/TubeScanner.csproj
+++ b/TubeScanner/TubeScanner/TubeScanner.csproj
@@ -36,6 +36,8 @@
     <ApplicationIcon>bsdicon_6j2_icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
@@ -63,17 +65,23 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Classes\VariableTypesClass.cs" />
+    <Compile Include="Configuration.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuration.Designer.cs">
+      <DependentUpon>Configuration.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\RackControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Controls\RackControl.Designer.cs">
       <DependentUpon>RackControl.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="TubeRack.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="TubeRack.Designer.cs">
+      <DependentUpon>TubeRack.cs</DependentUpon>
     </Compile>
     <Compile Include="Startup.cs">
       <SubType>Form</SubType>
@@ -83,11 +91,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Configuration.resx">
+      <DependentUpon>Configuration.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\RackControl.resx">
       <DependentUpon>RackControl.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="TubeRack.resx">
+      <DependentUpon>TubeRack.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
